tests/paczka1/small_fuzzy/97107442.err
Error in line 6: lsv8VT9EQU A84 55,85
Error in line 13: QepzE5hnG8 S829 -3,1
Error in line 14: lsv8VT9EQU A84 105,4
